# rust-wiredtiger

./: Cargo.toml  README.md  build.rs  wrapper.h
src/: lib.rs  main copy_rs  main.rs
src/schema/: context.rs  mod.rs  table.rs
src/wiredtiger/: api.rs  error.rs  mod.rs
