[package]
name = "rust_wiredtiger" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["perrynzhou"]
edition = "2018"

[dependencies]
chrono = "0.4"
rand = "0.8.4"
circular-queue = "0.2.6"

[build-dependencies]
bindgen = "0.59.0"

[[bin]]
name = "rust_wiredtiger"
path = "src/main.rs"

